--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -2,7 +2,10 @@ CC=gcc
 CFLAGS=-I.
 
 
-all: sequential_min_max parallel_min_max
+all: sequential_min_max parallel_min_max exec_with_fork
+
+exec_with_fork: sequential_min_max
+	$(CC) -o exec_with_fork -c exec_with_fork.c -std=c99 $(CFLAGS)
 
 sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c -std=c99 $(CFLAGS)
@@ -17,4 +20,4 @@ find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c -std=c99 $(CFLAGS)
 
 clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+	rm utils.o find_min_max.o sequential_min_max parallel_min_max exec_with_fork
